# cp-deep-dive

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  PROGRESS.md  README.md  SECURITY.md
.claude/: memory
apps/py-api/: Dockerfile  README.md  pyproject.toml
apps/py-api/src/py_api/: __init__.py  config.py  db.py  dependencies.py  errors.py  jobs.py  logging_setup.py  main.py  metrics.py  schemas.py  serialize.py  startup.py
apps/py-api/src/py_api/routes/: __init__.py  instances.py  meta.py  solve.py
apps/py-api/tests/: conftest.py  test_endpoints.py  test_errors.py  test_health.py  test_idempotency.py  test_instances.py  test_metrics.py  test_openapi.py  test_solve_lifecycle.py  test_sse_stream.py  test_version.py
apps/py-cp-sat/: README.md  pyproject.toml
apps/py-cp-sat/ch02-hello/: README.md  pyproject.toml
apps/py-cp-sat/ch02-hello/src/py_cp_sat_ch02/: __init__.py  __main__.py  main.py
apps/py-cp-sat/ch02-hello/tests/: test_hello.py
apps/py-cp-sat/ch04-puzzles/: README.md  pyproject.toml
apps/py-cp-sat/ch04-puzzles/src/py_cp_sat_ch04/: __init__.py  __main__.py  main.py  n_queens.py  send_more_money.py  sudoku.py
apps/py-cp-sat/ch04-puzzles/src/py_cp_sat_ch04/solutions/: __init__.py  exercise_4_1_scaling.py  exercise_4_2_two_two_four.py  exercise_4_3_reified_send_more.py  exercise_4_5_symmetry_breaking.py
apps/py-cp-sat/ch04-puzzles/tests/: test_n_queens.py  test_placeholder.py  test_send_more.py  test_solutions.py  test_sudoku.py
apps/py-cp-sat/ch05-optimization/: README.md  pyproject.toml
apps/py-cp-sat/ch05-optimization/src/py_cp_sat_ch05/: __init__.py  __main__.py  bin_packing.py  knapsack.py  main.py
apps/py-cp-sat/ch05-optimization/src/py_cp_sat_ch05/solutions/: __init__.py  exercise_5_1_bounded_knapsack.py  exercise_5_3_early_stop.py  exercise_5_4_lex_objective.py  exercise_5_5_enumerate_optimal.py
apps/py-cp-sat/ch05-optimization/tests/: test_bin_packing.py  test_knapsack.py  test_placeholder.py  test_solutions.py
apps/py-cp-sat/ch06-globals/: README.md  pyproject.toml
apps/py-cp-sat/ch06-globals/src/py_cp_sat_ch06/: __init__.py  __main__.py  automaton.py  element.py  inverse.py  lex_leq.py  main.py  reservoir.py  table_skills.py  tsp.py
apps/py-cp-sat/ch06-globals/src/py_cp_sat_ch06/solutions/: __init__.py  exercise_6_1_mtz_tsp.py  exercise_6_2_two_consecutive_nights.py  exercise_6_4_element_variable_values.py  exercise_6_5_lex_breaks_symmetry.py
apps/py-cp-sat/ch06-globals/tests/: test_globals.py  test_placeholder.py  test_solutions.py  test_tsp.py
apps/py-cp-sat/ch07-mzn-tour/: README.md  pyproject.toml
apps/py-cp-sat/ch07-mzn-tour/src/py_cp_sat_ch07/: __init__.py  __main__.py  comparison.py  main.py  mzn_runner.py
apps/py-cp-sat/ch07-mzn-tour/src/py_cp_sat_ch07/solutions/: __init__.py  exercise_7_1_multi_solver.py
apps/py-cp-sat/ch07-mzn-tour/tests/: test_comparison.py  test_placeholder.py  test_runner.py  test_solutions.py
apps/py-cp-sat/ch08-mzn-prototype/: README.md  pyproject.toml
apps/py-cp-sat/ch08-mzn-prototype/src/py_cp_sat_ch08/: __init__.py  __main__.py  main.py  parity.py  toy_nsp.py
apps/py-cp-sat/ch08-mzn-prototype/src/py_cp_sat_ch08/solutions/: __init__.py  exercise_8_1_larger_instance.py  exercise_8_2_tight_workload.py
apps/py-cp-sat/ch08-mzn-prototype/tests/: test_parity.py  test_placeholder.py  test_solutions.py  test_toy_nsp.py
apps/py-cp-sat/ch09-jobshop/: README.md  pyproject.toml
apps/py-cp-sat/ch09-jobshop/src/py_cp_sat_ch09/: __init__.py  __main__.py  gantt.py  instances.py  jobshop.py  main.py
apps/py-cp-sat/ch09-jobshop/src/py_cp_sat_ch09/solutions/: __init__.py  exercise_9_1_cumulative_staffing.py  exercise_9_2_release_times.py  exercise_9_3_optional_intervals.py  exercise_9_4_minimize_flow_time.py
apps/py-cp-sat/ch09-jobshop/tests/: test_gantt.py  test_jobshop.py  test_placeholder.py  test_solutions.py
apps/py-cp-sat/ch10-shifts/: README.md  pyproject.toml
apps/py-cp-sat/ch10-shifts/src/py_cp_sat_ch10/: __init__.py  __main__.py  main.py  shifts.py
apps/py-cp-sat/ch10-shifts/src/py_cp_sat_ch10/solutions/: __init__.py  exercise_10_1_rest_after_night.py  exercise_10_2_coverage_bump.py  exercise_10_3_weekend_off.py  exercise_10_4_infeasible.py
apps/py-cp-sat/ch10-shifts/tests/: test_placeholder.py  test_shifts.py  test_solutions.py
apps/py-cp-sat/ch11-nsp-v1/: README.md  pyproject.toml
apps/py-cp-sat/ch11-nsp-v1/src/py_cp_sat_ch11/: __init__.py  __main__.py  main.py  render.py
apps/py-cp-sat/ch11-nsp-v1/src/py_cp_sat_ch11/solutions/: __init__.py  exercise_11_a_infeasibility_core.py  exercise_11_b_extra_nurse.py  exercise_11_c_three_tier_skills.py  exercise_11_d_presolve_inspection.py  exercise_11_e_certificate_roundtrip.py
apps/py-cp-sat/ch11-nsp-v1/tests/: test_placeholder.py  test_solve.py
apps/py-cp-sat/ch12-nsp-v2/: README.md  pyproject.toml
apps/py-cp-sat/ch12-nsp-v2/src/py_cp_sat_ch12/: __init__.py  __main__.py  main.py  render.py
apps/py-cp-sat/ch12-nsp-v2/src/py_cp_sat_ch12/solutions/: __init__.py  exercise_12_a_weights_sensitivity.py  exercise_12_b_lexicographic.py  exercise_12_c_warmstart.py  exercise_12_d_custom_objective.py
apps/py-cp-sat/ch12-nsp-v2/tests/: test_placeholder.py  test_solve.py
apps/py-cp-sat/ch13-nsp-v3/: README.md  pyproject.toml
apps/py-cp-sat/ch13-nsp-v3/src/py_cp_sat_ch13/: __init__.py  __main__.py  main.py
apps/py-cp-sat/ch13-nsp-v3/src/py_cp_sat_ch13/solutions/: __init__.py  exercise_13_a_num_workers.py  exercise_13_b_linearization.py  exercise_13_c_symmetry.py  exercise_13_d_infeasibility_cores.py
apps/py-cp-sat/ch13-nsp-v3/tests/: test_placeholder.py  test_solve.py
apps/py-cp-sat/nsp-core/: README.md  pyproject.toml
apps/py-cp-sat/nsp-core/src/nsp_core/: __init__.py  domain.py  loader.py  model_v1.py  model_v2.py  solver.py  validator.py
benchmarks/: README.md  run-baseline.sh
claude-memory/: feedback_dual_language_parity.md  feedback_spec_driven_dev.md  project_artifacts.md
docs/: overview.md  plan.md
tools/: README.md  pyproject.toml  (+6 more)
(+317 files in other folders)
