[project]
name = "py-cp-sat-ch02-hello"
version = "0.1.0"
description = "Chapter 2 — Hello, CP-SAT. Solve a tiny linear system with CP-SAT in Python."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ortools>=9.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/py_cp_sat_ch02"]

[dependency-groups]
dev = [
    "pytest>=8.3",
]
