[project]
name = "py-cp-sat-ch04-puzzles"
version = "0.1.0"
description = "Chapter 04 — Classic puzzles — N-Queens, SEND+MORE=MONEY, cryptarithmetic"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ortools>=9.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/py_cp_sat_ch04"]

[dependency-groups]
dev = [
    "pytest>=8.3",
]
