[project]
name = "py-cp-sat-ch08-mzn-prototype"
version = "0.1.0"
description = "Chapter 08 — MiniZinc prototype then Python port of a toy NSP."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ortools>=9.15",
    "py-cp-sat-ch07-mzn-tour",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/py_cp_sat_ch08"]

[tool.uv.sources]
py-cp-sat-ch07-mzn-tour = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.3",
]
