[project]
name = "py-cp-sat-ch09-jobshop"
version = "0.1.0"
description = "Chapter 09 — Intervals, NoOverlap, Cumulative — Job-Shop"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ortools>=9.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/py_cp_sat_ch09"]

[dependency-groups]
dev = [
    "pytest>=8.3",
]
