[project]
name = "py-cp-sat-ch11-nsp-v1"
version = "0.1.0"
description = "Chapter 11 — NSP v1 — toy instance, hard constraints only (HC-1..HC-8)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ortools>=9.15",
    "nsp-core",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/py_cp_sat_ch11"]

[dependency-groups]
dev = [
    "pytest>=8.3",
]
