[project]
name = "py-cp-sat-ch12-nsp-v2"
version = "0.1.0"
description = "Chapter 12 — NSP v2 — soft constraints, preferences, fairness"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ortools>=9.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/py_cp_sat_ch12"]

[dependency-groups]
dev = [
    "pytest>=8.3",
]
