[project]
name = "py-cp-sat-ch13-nsp-v3"
version = "0.1.0"
description = "Chapter 13 — NSP v3 — INRC-II benchmark-scale + tuning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ortools>=9.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/py_cp_sat_ch13"]

[dependency-groups]
dev = [
    "pytest>=8.3",
]
